--- a/appspec.rnw
+++ b/appspec.rnw
@@ -1,45 +1,90 @@
 11 
-    de.renew.gui.CPNDrawing 17 
-        de.renew.gui.PlaceFigure "attributes" "attributes" 3 "FigureWithID" "Int" 1 "FrameColor" "Color" 0 0 0 255 "FillColor" "Color" 0 0 255 128 265 90 20 20 NULL  
-        de.renew.gui.ArcConnection "attributes" "attributes" 3 "FigureWithID" "Int" 2 "FrameColor" "Color" 0 0 0 255 "FillColor" "Color" 0 0 255 128 2 275 110 275 152 NULL 
+    de.renew.gui.CPNDrawing 33 
+        de.renew.gui.TransitionFigure "attributes" "attributes" 3 "FigureWithID" "Int" 275 "FrameColor" "Color" 0 0 0 255 "FillColor" "Color" 0 0 255 128 278 106 24 16 NULL  
+        de.renew.gui.PlaceFigure "attributes" "attributes" 3 "FigureWithID" "Int" 276 "FrameColor" "Color" 0 0 0 255 "FillColor" "Color" 0 0 255 128 280 154 20 20 NULL  
+        de.renew.gui.ArcConnection "attributes" "attributes" 3 "FigureWithID" "Int" 277 "FrameColor" "Color" 0 0 0 255 "FillColor" "Color" 0 0 255 128 2 290 174 289 205 NULL 
             CH.ifa.draw.figures.ArrowTip 0.4 8.0 8.0 1  "CH.ifa.draw.figures.ArrowTip" 
-            CH.ifa.draw.figures.ChopEllipseConnector REF 1  
+            CH.ifa.draw.figures.ChopEllipseConnector REF 2  
             CH.ifa.draw.standard.ChopBoxConnector 
-                de.renew.gui.TransitionFigure "attributes" "attributes" 3 "FigureWithID" "Int" 3 "FrameColor" "Color" 0 0 0 255 "FillColor" "Color" 0 0 255 128 264 152 24 16 NULL    REF 6 
-        de.renew.gui.ArcConnection "attributes" "attributes" 3 "FigureWithID" "Int" 5 "FrameColor" "Color" 0 0 0 255 "FillColor" "Color" 0 0 255 128 2 275 168 275 204 NULL 
+                de.renew.gui.TransitionFigure "attributes" "attributes" 3 "FigureWithID" "Int" 278 "FrameColor" "Color" 0 0 0 255 "FillColor" "Color" 0 0 255 128 277 205 24 16 NULL    REF 7 
+        de.renew.gui.CPNTextFigure "attributes" "attributes" 4 "TextAlignment" "Int" 1 "FigureWithID" "Int" 279 "FrameColor" "Color" 255 199 158 255 "FillColor" "Color" 254 254 254 255 276 178 "[id,d]" "SansSerif" 0 12 0 REF 3 
+            CH.ifa.draw.standard.OffsetLocator 0 -4 
+                CH.ifa.draw.standard.RelativeLocator 0.5 0.5   1  
+        de.renew.gui.ArcConnection "attributes" "attributes" 1 "FigureWithID" "Int" 281 2 290 122 290 155 NULL 
             CH.ifa.draw.figures.ArrowTip 0.4 8.0 8.0 1  "CH.ifa.draw.figures.ArrowTip" 
-            CH.ifa.draw.standard.ChopBoxConnector REF 6  
+            CH.ifa.draw.standard.ChopBoxConnector REF 1  
+            CH.ifa.draw.figures.ChopEllipseConnector REF 2   
+        de.renew.gui.CPNTextFigure "attributes" "attributes" 4 "TextAlignment" "Int" 1 "FigureWithID" "Int" 282 "FrameColor" "Color" 255 199 158 255 "FillColor" "Color" 254 254 254 255 277 128 "[id,d]" "SansSerif" 0 12 0 REF 11 
+            CH.ifa.draw.standard.OffsetLocator 0 -3 
+                CH.ifa.draw.standard.RelativeLocator 0.5 0.5   1  
+        de.renew.gui.TransitionFigure "attributes" "attributes" 1 "FigureWithID" "Int" 287 278 23 24 16 NULL  
+        de.renew.gui.ArcConnection "attributes" "attributes" 1 "FigureWithID" "Int" 288 2 290 39 290 62 NULL 
+            CH.ifa.draw.figures.ArrowTip 0.4 8.0 8.0 1  "CH.ifa.draw.figures.ArrowTip" 
+            CH.ifa.draw.standard.ChopBoxConnector REF 18  
             CH.ifa.draw.figures.ChopEllipseConnector 
-                de.renew.gui.PlaceFigure "attributes" "attributes" 3 "FigureWithID" "Int" 6 "FrameColor" "Color" 0 0 0 255 "FillColor" "Color" 0 0 255 128 265 203 20 20 NULL    REF 11 
-        de.renew.gui.ArcConnection "attributes" "attributes" 3 "FigureWithID" "Int" 8 "FrameColor" "Color" 0 0 0 255 "FillColor" "Color" 0 0 255 128 2 275 223 275 257 NULL 
+                de.renew.gui.PlaceFigure "attributes" "attributes" 3 "FigureWithID" "Int" 289 "FrameColor" "Color" 0 0 0 255 "FillColor" "Color" 112 219 147 255 280 61 20 20 NULL    REF 23 
+        de.renew.gui.CPNTextFigure "attributes" "attributes" 4 "TextAlignment" "Int" 1 "FigureWithID" "Int" 291 "FrameColor" "Color" 255 199 158 255 "FillColor" "Color" 255 199 158 255 324 26 ":begin(d)" "SansSerif" 0 12 0 REF 18 
+            CH.ifa.draw.standard.OffsetLocator 58 2 
+                CH.ifa.draw.standard.RelativeLocator 0.5 0.5   1  
+        de.renew.gui.CPNTextFigure "attributes" "attributes" 4 "TextAlignment" "Int" 1 "FigureWithID" "Int" 292 "FrameColor" "Color" 255 199 158 255 "FillColor" "Color" 254 254 254 255 306 42 "d" "SansSerif" 0 12 0 REF 19 
+            CH.ifa.draw.standard.OffsetLocator 19 -1 
+                CH.ifa.draw.standard.RelativeLocator 0.5 0.5   1  
+        de.renew.gui.PlaceFigure "attributes" "attributes" 3 "FigureWithID" "Int" 305 "FrameColor" "Color" 0 0 0 255 "FillColor" "Color" 0 0 255 128 279 254 20 20 NULL  
+        de.renew.gui.TransitionFigure "attributes" "attributes" 3 "FigureWithID" "Int" 308 "FrameColor" "Color" 0 0 0 255 "FillColor" "Color" 0 0 255 128 277 301 24 16 NULL  
+        de.renew.gui.PlaceFigure "attributes" "attributes" 3 "FigureWithID" "Int" 309 "FrameColor" "Color" 0 0 0 255 "FillColor" "Color" 0 0 255 128 279 349 20 20 NULL  
+        de.renew.gui.ArcConnection "attributes" "attributes" 3 "FigureWithID" "Int" 310 "FrameColor" "Color" 0 0 0 255 "FillColor" "Color" 0 0 255 128 2 289 369 288 400 NULL 
             CH.ifa.draw.figures.ArrowTip 0.4 8.0 8.0 1  "CH.ifa.draw.figures.ArrowTip" 
-            CH.ifa.draw.figures.ChopEllipseConnector REF 11  
+            CH.ifa.draw.figures.ChopEllipseConnector REF 32  
             CH.ifa.draw.standard.ChopBoxConnector 
-                de.renew.gui.TransitionFigure "attributes" "attributes" 3 "FigureWithID" "Int" 9 "FrameColor" "Color" 0 0 0 255 "FillColor" "Color" 0 0 255 128 263 257 24 16 NULL    REF 16 
-        de.renew.gui.ArcConnection "attributes" "attributes" 3 "FigureWithID" "Int" 21 "FrameColor" "Color" 0 0 0 255 "FillColor" "Color" 0 0 255 128 2 275 273 275 304 NULL 
+                de.renew.gui.TransitionFigure "attributes" "attributes" 3 "FigureWithID" "Int" 311 "FrameColor" "Color" 0 0 0 255 "FillColor" "Color" 0 0 255 128 276 400 24 16 NULL    REF 37 
+        de.renew.gui.CPNTextFigure "attributes" "attributes" 4 "TextAlignment" "Int" 1 "FigureWithID" "Int" 312 "FrameColor" "Color" 255 199 158 255 "FillColor" "Color" 254 254 254 255 275 373 "[id,d]" "SansSerif" 0 12 0 REF 33 
+            CH.ifa.draw.standard.OffsetLocator 0 -4 
+                CH.ifa.draw.standard.RelativeLocator 0.5 0.5   1  
+        de.renew.gui.ArcConnection "attributes" "attributes" 1 "FigureWithID" "Int" 314 2 289 317 289 350 NULL 
             CH.ifa.draw.figures.ArrowTip 0.4 8.0 8.0 1  "CH.ifa.draw.figures.ArrowTip" 
-            CH.ifa.draw.standard.ChopBoxConnector REF 16  
+            CH.ifa.draw.standard.ChopBoxConnector REF 31  
+            CH.ifa.draw.figures.ChopEllipseConnector REF 32   
+        de.renew.gui.CPNTextFigure "attributes" "attributes" 4 "TextAlignment" "Int" 1 "FigureWithID" "Int" 315 "FrameColor" "Color" 255 199 158 255 "FillColor" "Color" 254 254 254 255 276 323 "[id,d]" "SansSerif" 0 12 0 REF 41 
+            CH.ifa.draw.standard.OffsetLocator 0 -3 
+                CH.ifa.draw.standard.RelativeLocator 0.5 0.5   1  
+        de.renew.gui.ArcConnection "attributes" "attributes" 1 "FigureWithID" "Int" 318 2 289 274 289 301 NULL 
+            CH.ifa.draw.figures.ArrowTip 0.4 8.0 8.0 1  "CH.ifa.draw.figures.ArrowTip" 
+            CH.ifa.draw.figures.ChopEllipseConnector REF 30  
+            CH.ifa.draw.standard.ChopBoxConnector REF 31   
+        de.renew.gui.CPNTextFigure "attributes" "attributes" 4 "TextAlignment" "Int" 1 "FigureWithID" "Int" 319 "FrameColor" "Color" 255 199 158 255 "FillColor" "Color" 254 254 254 255 286 277 "d" "SansSerif" 0 12 0 REF 48 
+            CH.ifa.draw.standard.OffsetLocator 0 -3 
+                CH.ifa.draw.standard.RelativeLocator 0.5 0.5   1  
+        de.renew.gui.ArcConnection "attributes" "attributes" 1 "FigureWithID" "Int" 344 2 288 416 288 457 NULL 
+            CH.ifa.draw.figures.ArrowTip 0.4 8.0 8.0 1  "CH.ifa.draw.figures.ArrowTip" 
+            CH.ifa.draw.standard.ChopBoxConnector REF 37  
             CH.ifa.draw.figures.ChopEllipseConnector 
-                de.renew.gui.PlaceFigure "attributes" "attributes" 3 "FigureWithID" "Int" 22 "FrameColor" "Color" 0 0 0 255 "FillColor" "Color" 0 0 255 128 265 303 20 20 NULL    REF 21 
-        de.renew.gui.ArcConnection "attributes" "attributes" 3 "FigureWithID" "Int" 25 "FrameColor" "Color" 0 0 0 255 "FillColor" "Color" 0 0 255 128 2 275 323 275 355 NULL 
+                de.renew.gui.PlaceFigure "attributes" "attributes" 1 "FigureWithID" "Int" 345 278 456 20 20 NULL    REF 59 
+        de.renew.gui.ArcConnection "attributes" "attributes" 1 "FigureWithID" "Int" 348 2 290 81 290 106 NULL 
             CH.ifa.draw.figures.ArrowTip 0.4 8.0 8.0 1  "CH.ifa.draw.figures.ArrowTip" 
-            CH.ifa.draw.figures.ChopEllipseConnector REF 21  
-            CH.ifa.draw.standard.ChopBoxConnector 
-                de.renew.gui.TransitionFigure "attributes" "attributes" 3 "FigureWithID" "Int" 26 "FrameColor" "Color" 0 0 0 255 "FillColor" "Color" 0 0 255 128 263 355 24 16 NULL    REF 26 
-        de.renew.gui.ArcConnection "attributes" "attributes" 3 "FigureWithID" "Int" 29 "FrameColor" "Color" 0 0 0 255 "FillColor" "Color" 0 0 255 128 2 274 371 274 415 NULL 
+            CH.ifa.draw.figures.ChopEllipseConnector REF 23  
+            CH.ifa.draw.standard.ChopBoxConnector REF 1   
+        de.renew.gui.CPNTextFigure "attributes" "attributes" 4 "TextAlignment" "Int" 1 "FigureWithID" "Int" 349 "FrameColor" "Color" 255 199 158 255 "FillColor" "Color" 254 254 254 255 303 86 "d" "SansSerif" 0 12 0 REF 60 
+            CH.ifa.draw.standard.OffsetLocator 16 0 
+                CH.ifa.draw.standard.RelativeLocator 0.5 0.5   1  
+        de.renew.gui.ArcConnection "attributes" "attributes" 1 "FigureWithID" "Int" 350 2 289 221 289 255 NULL 
             CH.ifa.draw.figures.ArrowTip 0.4 8.0 8.0 1  "CH.ifa.draw.figures.ArrowTip" 
-            CH.ifa.draw.standard.ChopBoxConnector REF 26  
-            CH.ifa.draw.figures.ChopEllipseConnector 
-                de.renew.gui.PlaceFigure "attributes" "attributes" 3 "FigureWithID" "Int" 30 "FrameColor" "Color" 0 0 0 255 "FillColor" "Color" 0 0 255 128 264 414 20 20 NULL    REF 31 
-        de.renew.gui.CPNTextFigure "attributes" "attributes" 4 "TextAlignment" "Int" 1 "FigureWithID" "Int" 33 "FrameColor" "Color" 255 199 158 255 "FillColor" "Color" 255 199 158 255 272 93 "[]" "SansSerif" 0 12 0 REF 1 
+            CH.ifa.draw.standard.ChopBoxConnector REF 7  
+            CH.ifa.draw.figures.ChopEllipseConnector REF 30   
+        de.renew.gui.CPNTextFigure "attributes" "attributes" 4 "TextAlignment" "Int" 1 "FigureWithID" "Int" 283 "FrameColor" "Color" 255 199 158 255 "FillColor" "Color" 255 199 158 255 308 206 ":endcall(id,\"f1\")" "SansSerif" 1 12 0 REF 7 
+            CH.ifa.draw.standard.OffsetLocator 63 0 
+                CH.ifa.draw.standard.RelativeLocator 0.5 0.5   1  
+        de.renew.gui.CPNTextFigure "attributes" "attributes" 4 "TextAlignment" "Int" 1 "FigureWithID" "Int" 316 "FrameColor" "Color" 255 199 158 255 "FillColor" "Color" 255 199 158 255 315 401 ":endcall(id,\"f2\")" "SansSerif" 1 12 0 REF 37 
+            CH.ifa.draw.standard.OffsetLocator 71 0 
+                CH.ifa.draw.standard.RelativeLocator 0.5 0.5   1  
+        de.renew.gui.CPNTextFigure "attributes" "attributes" 4 "TextAlignment" "Int" 1 "FigureWithID" "Int" 351 "FrameColor" "Color" 255 199 158 255 "FillColor" "Color" 254 254 254 255 286 231 "d" "SansSerif" 0 12 0 REF 67 
             CH.ifa.draw.standard.OffsetLocator 0 0 
                 CH.ifa.draw.standard.RelativeLocator 0.5 0.5   1  
-        de.renew.gui.CPNTextFigure "attributes" "attributes" 4 "TextAlignment" "Int" 1 "FigureWithID" "Int" 34 "FrameColor" "Color" 255 199 158 255 "FillColor" "Color" 255 199 158 255 294 358 ":execute(\"opB\",[din],[din*1.5,\"leave\"])" "SansSerif" 1 12 0 REF 26 
-            CH.ifa.draw.standard.OffsetLocator 126 2 
+        de.renew.gui.CPNTextFigure "attributes" "attributes" 4 "TextAlignment" "Int" 1 "FigureWithID" "Int" 352 "FrameColor" "Color" 255 199 158 255 "FillColor" "Color" 254 254 254 255 285 429 "d" "SansSerif" 0 12 0 REF 55 
+            CH.ifa.draw.standard.OffsetLocator 0 0 
                 CH.ifa.draw.standard.RelativeLocator 0.5 0.5   1  
-        de.renew.gui.CPNTextFigure "attributes" "attributes" 4 "TextAlignment" "Int" 1 "FigureWithID" "Int" 32 "FrameColor" "Color" 255 199 158 255 "FillColor" "Color" 255 199 158 255 294 260 ":execute(\"opA\",[din],[din*1.5,\"stay\"])" "SansSerif" 1 12 0 REF 16 
-            CH.ifa.draw.standard.OffsetLocator 123 2 
+        de.renew.gui.CPNTextFigure "attributes" "attributes" 4 "TextAlignment" "Int" 1 "FigureWithID" "Int" 280 "FrameColor" "Color" 255 199 158 255 "FillColor" "Color" 255 199 158 255 314 108 ":startcall(id,\"f1\",[[\"f0\",\"f1\",d]])" "SansSerif" 1 12 0 REF 1 
+            CH.ifa.draw.standard.OffsetLocator 110 1 
                 CH.ifa.draw.standard.RelativeLocator 0.5 0.5   1  
-        de.renew.gui.CPNTextFigure "attributes" "attributes" 4 "TextAlignment" "Int" 1 "FigureWithID" "Int" 31 "FrameColor" "Color" 255 199 158 255 "FillColor" "Color" 255 199 158 255 296 153 ":execute(\"opA\",[din],[din*1.5,\"stay\"])" "SansSerif" 1 12 0 REF 6 
-            CH.ifa.draw.standard.OffsetLocator 124 0 
-                CH.ifa.draw.standard.RelativeLocator 0.5 0.5   1  NULL  29 442 593 600 
+        de.renew.gui.CPNTextFigure "attributes" "attributes" 4 "TextAlignment" "Int" 1 "FigureWithID" "Int" 313 "FrameColor" "Color" 255 199 158 255 "FillColor" "Color" 255 199 158 255 313 303 ":startcall(id,\"f2\",[[\"f1\",\"f2\",d]])" "SansSerif" 1 12 0 REF 31 
+            CH.ifa.draw.standard.OffsetLocator 110 1 
+                CH.ifa.draw.standard.RelativeLocator 0.5 0.5   1  NULL  541 206 1195 874 
